--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <h1>Hi! I'm Diogo Cunha.</h1>
-    <h3> a brazilian product designer based in São Paulo.</h3>
+    <div class="container">
+        <div class="header">
+            <h1>Hi! I'm Diogo Cunha.</h1>
+            <h3> a brazilian product designer based in São Paulo.</h3>
+        </div>
+        <div class="socialmedia">
+            <a href="https://www.behance.net/diogocvc">Behance</a>
+            <a href="https://www.linkedin.com/in/diogocvc/">Linkedin</a>
+            <a href="https://www.twitter.com/diogocvc">Twitter</a>
+        </div>
+    </div>
 </body>
 </html>
