Adding some content
Adding some bio content.

--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
         <div class="header">
             <h1>Hi! I'm Diogo Cunha.</h1>
             <h3> a brazilian product designer based in São Paulo.</h3>
+            <div class="content">
+                <p>My work is help people and companies to understand and overcome their challenges creating awesome experiences to digital products and services.<br> I'm currently strategy leader and partner at Contra.cc, a product and design consultancy agency based in João Pessoa, Brazil.<br> My interests range from interaction design to business strategy. I am also interested in communication, branding and tech.<br> You can click the links below to view my portfolio. If you’d like to get in touch, feel free to say hello through any of the social links too.</p>
+            </div>
         </div>
         <div class="socialmedia">
             <a href="https://www.behance.net/diogocvc">Behance</a>
             <a href="https://www.linkedin.com/in/diogocvc/">Linkedin</a>
             <a href="https://www.twitter.com/diogocvc">Twitter</a>
+            <a href="https://dribbble.com/diogocvc">Dribbble</a>
         </div>
     </div>
 </body>
