--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <div class="container">
         <div class="header">
             <h1>Hi! I'm Diogo Carvalho.</h1>
-            <h3> a brazilian designer based in São Paulo.</h3>
+            <h3> A brazilian designer based in São Paulo.</h3>
         </div>
         <div class="content">
-            <p>I help people and companies to understand and overcome their challenges creating awesome experiences to digital products and services.<br><br> I'm currently strategy leader and partner at <a href="https://contra.cc">Contra.cc</a>, a product and design consultancy agency from João Pessoa and based in São Paulo, Brazil.<br><br> My interests range from strategic design to business strategy. I am also interested in interaction design, communication, branding and tech.<br><br> You can click the links below to view my portfolio. If you’d like to get in touch, feel free to say hello through any of the social links too.</p>
+            <p>I help people and companies to understand and overcome their challenges creating awesome experiences to digital products and services.<br><br> I'm currently strategy leader and partner at <a class="contralink" href="https://contra.cc">Contra.cc</a>, a product and design consultancy agency from João Pessoa and based in São Paulo, Brazil.<br><br> My interests range from strategic design to business strategy. I am also interested in interaction design, communication, branding and tech.<br><br> You can click the links below to view my portfolio. If you’d like to get in touch, feel free to say hello through any of the social links too.</p>
         </div>
         <div class="socialmedia">
             <a href="https://www.behance.net/diogocvc">Behance</a>
