--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <h2>My work</h2>
             </div>
             <div class="content">
-                <details class="project-one">
+                <details class="project-farmaja">
                     <summary class="project-title">
                         <h3>FarmaJá App Redesign</h3>
                     </summary>
@@ -127,7 +127,7 @@
                         </div>
                     </div>
                 </details>
-                <details class="project-two">
+                <details class="project-cardano">
                     <summary class="project-title">
                         <h3>Emurgo / Cardano website</h3>
                     </summary>
@@ -146,7 +146,27 @@
                         </div>
                     </div>
                 </details>
-                <details class="project-three">
+                <details class="project-cartesi">
+                    <summary class="project-title">
+                        <h3>Cartesi</h3>
+                    </summary>
+                    <div class="project-content">
+                        <div class="project-content-text">
+                            <ul class="project-summary">
+                                <li><span>Client:</span> Cartesi</li>
+                                <li><span>Year:</span> Since 2017</li>
+                                <li><span>Role:</span> UX and design lead</li>
+                                <li><span>Team:</span> <a href="http://startupkit.cc">Startup Kit</a></li>
+                            </ul>
+                            <p>Since 2018 we, at Startup Kit, are helping Cartesi, a blockchain project based in China, to overcome the problems of scalability, of computation, and infrastructure for blockchain applications.</p>
+                        </div>
+                        <div class="project-content-images">
+                            <img src="image/cartesi1.jpeg" alt="Cartesi's website">
+                            <img src="image/cartesi2.png" alt="Cartesi's website">
+                        </div>
+                    </div>
+                </details>
+                <details class="project-opslock">
                     <summary class="project-title">
                         <h3>Opslock website</h3>
                     </summary>
@@ -170,7 +190,29 @@
                         </div>
                     </div>
                 </details>
-                <details class="project-four">
+                <details class="project-crypto">
+                    <summary class="project-title">
+                        <h3>Crypto projects</h3>
+                    </summary>
+                    <div class="project-content">
+                        <div class="project-content-text">
+                            <ul class="project-summary">
+                                <li><span>Client:</span> IPOR and DGame</li>
+                                <li><span>Year:</span> 2021</li>
+                                <li><span>Role:</span> design lead</li>
+                                <li><span>Team:</span> <a href="http://startupkit.cc">Startup Kit</a></li>
+                            </ul>
+                            <p>With the explosion of DeFi I had the possibility to work with some projects, learning and contributing for this market growth.</p>
+                            <p>For IPOR, a DeFi project based in Zug, Switzerland, as a design lead I created the landing page and, leading a team with 3 designers, we create animations, pitch deck and a social media pack.</p>
+                            <p>For DGame, a a blockchain game index, I worked on the logo, visual concept and landing page.</p>
+                        </div>
+                        <div class="project-content-images">
+                            <img src="image/ipor.png" alt="IPOR's website">
+                            <img src="image/dgame.png" alt="DGame's website">
+                        </div>
+                    </div>
+                </details>
+                <details class="project-onpay">
                     <summary class="project-title">
                         <h3>OnPay branding</h3>
                     </summary>
@@ -199,7 +241,7 @@
             </div>
         </div>
         <div class="contact">
-            <h3>Get in contact: <a href="mailto:diogocvc@gmail.com">diogocvc@gmail.com</a></h3>
+            <h3>Get in contact: <a href="mailto:diogocvc@gmail.com">diogocvc@gmail.com</a> | <a href="https://t.me/diogocvc">Telegram</a></h3>
         </div>
     </div>
 </body>
