Adjustments for Safari browser
Adjustments on CSS for the details and summary tags on Safari.

--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@
                         </div>
                     </div>
                 </details>
-                <details class="project-crypto">
+                <details class="project-defi">
                     <summary class="project-title">
-                        <h3>Crypto projects</h3>
+                        <h3>DeFi (crypto) projects</h3>
                     </summary>
                     <div class="project-content">
                         <div class="project-content-text">
