Border between projects
Adding borders between the projects.

--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
                                 <li><span>Year:</span> 2019</li>
                                 <li><span>Role:</span> Product strategist and designer</li>
                             </ul>
-                            <p>I was invited by FarmaJá to improve the product.<br><br>
-                            The project had 3 steps: Value proposition and atributes definition, communicartion materials for partners and investors (pitch deck), and product design (ux/ui)</p>
+                            <p>I was invited by FarmaJá to improve the product.</p>
+                            <p>The project had 3 steps: Value proposition and atributes definition, communicartion materials for partners and investors (pitch deck), and product design (ux/ui).</p>
                             <p>For the interface redesign our focus was on the eldery users, that natualy take more medicines and have less mobility, therefore they are an important user group. <b>Limited vision and less tech skills were attriction to be reduced.</b></p>
                             <p>Simplifying, using just black to the content and light colors to background and components, avoiding messy interface, using red only on focus points to get atention, bigger fonts and touch areas, were some improvments on the UI.</p>
                             <p>For users, an easy way to find and buy cheaper medicines. For drugstores, a tool to grow their sales on a pandemic world, where is necessary stay at home.</p>
